cabal-version:      2.4
name:               LineOfAction
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Kloudifold
maintainer:         cloudifold.3125@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable LineOfAction
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules: Board, Render, Util

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.4.0, ansi-terminal ^>= 0.11, lens, mtl
    hs-source-dirs:   app
    default-language: Haskell2010
